2003-08-09 TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c, interface/ncurs_c.c,
	  interface/rtsyn_common.c, interface/server_c.c,
	  timidity/playmidi.c, timidity/timidity.c
	  (opt_realtime_playing, ctl.trace_playing):
	  Fix to fit with long options
	  Commonize parse_opt_O() between short and long options

2003-08-08  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Hack up around short/long options
	  Some option renamed
	  --[no-]4-point-interpolation -> --interpolation (merged)
	  --drums                      -> --drum-channel
	  --[no-]new-lpf               -> --[no-]voice-lpf
	  --exec                       -> --config-string
	  Some option deleted
	  --[no-]auto-start
	  --[no-]auto-exit
	  --[no-]drag-start
	  --[no-]uniq-list
	  --[no-]refine-list
	  --[no-]continue

2003-08-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Commonize functions between short and long options

2003-08-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Hack up around long options
	  Rename --temperament -> --pure-intonation

2003-08-07 mput <root@mput.dip.jp>

	* timidity/timidity.c (set_tim_opt_long):
	  Some options was disabled: re-activate them.

2003-08-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix around long options
	  Hack up around output option parser

2003-08-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Fix wrong branch between set_tim_opt_{long,short}
	  Fix typo around long options
	  Hack up around interface option parser

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Some option renamed
	  --mid          -> --default-mid
	  --noise-shaper -> --noise-shaping
	  Hack up around effect option parser

2003-08-04  mput <root@mput.dip.jp>

	* timidity/timidity.c: Some option renamed
	  --auto-volume-compensation -> --[no-]volume-compensation
	  --config                   -> --config-file
	  --keysig                   -> --force-keysig